--- a/analysisexample.ipynb
+++ b/analysisexample.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "42fbd306-59a4-4d2a-9f2d-c1311b083345",
+   "metadata": {},
+   "source": [
+    "# Sample Report"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "dd1e3b3e-4123-4520-b71f-bf81507d276d",
    "metadata": {},
    "source": [
-    "# Analysis of Demographics Canada and Market Research"
+    "## Analysis of Demographics Canada and Market Research"
    ]
   },
   {
@@ -21,16 +29,18 @@
    "id": "919e995e-1f4f-4df3-b8a2-f40e391be256",
    "metadata": {},
    "source": [
+    "Why this analysis? The objective of this study was to determine the population, its characteristics, and the ethnicity of Canada, with a focus on the Latin American population and customer preferences. Why Latin American? Because someone wanted to know where to sell their merchandise in Canada and the target market.\n",
+    "\n",
     "This is an analysis of the demographics of Canada, a study of the population based mostly on information from the Census 2016. This document will continue as follows:\n",
-    "1. Methods & Procedures\n",
-    "2. Age statistics.\n",
-    "3. Occupation statistics.\n",
-    "4. Income statistics.\n",
-    "5. Latin American statistics\n",
-    "6. People reported with Diabetes 2016-2019\n",
-    "7. Survey of organic drink and food 2021\n",
-    "8. Conclusions\n",
-    "9. References"
+    "+ Methods & Procedures\n",
+    "+ Age statistics.\n",
+    "+ Occupation statistics.\n",
+    "+ Income statistics.\n",
+    "+ Latin American statistics\n",
+    "+ People reported with Diabetes 2016-2019\n",
+    "+ Survey of organic drink and food 2021\n",
+    "+ Conclusions\n",
+    "+ References"
    ]
   },
   {
@@ -61,9 +71,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 1,
    "id": "a61ca2a8-9bfb-4a13-a022-a9816840e902",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Importing libraries to read csv data and plot\n",
@@ -75,9 +93,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 2,
    "id": "245f1246-6982-45d7-a014-a2e3f3ffa104",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -291,7 +317,7 @@
        "21  100 years and over     8230     1340     6890"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,9 +336,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 3,
    "id": "b17cb1dc-c9f3-4556-be30-07a82330c763",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -351,9 +385,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 4,
    "id": "e71e98ca-d0be-482e-9d00-aedd743cfc52",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -423,7 +465,7 @@
        "3  85 years and over    2.2   1.6     2.8"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,9 +487,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 5,
    "id": "c015b166-13af-4245-81c6-ebdca36b7f6e",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -484,9 +534,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 6,
    "id": "27849191-a6ba-4346-acdb-1d77e9f7693c",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -616,7 +674,7 @@
        "9   237845  "
       ]
      },
-     "execution_count": 245,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,9 +696,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 7,
    "id": "7ae8b752-dd81-43cf-8ee9-318cf3df24cb",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -670,9 +736,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 8,
    "id": "b29a1d68-8dee-48ad-8023-984e58e0e921",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -768,7 +842,7 @@
        "9             Manufacture   4.46"
       ]
      },
-     "execution_count": 247,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,9 +855,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 9,
    "id": "99212fe9-e45a-49de-bf42-be2db5e6decf",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -820,9 +902,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 10,
    "id": "9b1164e1-6a95-40b1-9aa6-d76cf368b67d",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -882,7 +972,7 @@
        "3            Average Income 2021  54630"
       ]
      },
-     "execution_count": 249,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -895,9 +985,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 11,
    "id": "b2998be8-15d3-404c-b47e-74b662e41541",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -957,9 +1055,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 12,
    "id": "72fdaaac-9623-4f5e-b9b0-423781969d51",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -1260,7 +1366,7 @@
        "25      65      30      35  "
       ]
      },
-     "execution_count": 251,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1274,9 +1380,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 13,
    "id": "36884e95-6402-4dc2-81c7-12fce98cfc39",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -1324,9 +1438,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 14,
    "id": "ed7da8b7-a7bd-4b85-a037-f2130acfaec5",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -1391,7 +1513,7 @@
        "3  60 to 79 years        17.7  1,204,400"
       ]
      },
-     "execution_count": 253,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1413,9 +1535,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 15,
    "id": "71bd9780-484c-40eb-8eda-385f206df17b",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -1459,9 +1589,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 16,
    "id": "b9b6a33f-cac3-4f33-9afe-e52d7f4e68a3",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -1545,7 +1683,7 @@
        "7         Are not different than mainstream products          18"
       ]
      },
-     "execution_count": 255,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1567,9 +1705,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 17,
    "id": "16e05b9a-c4da-4520-a9e3-edc57c8a96a0",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -1616,13 +1762,13 @@
    "id": "514b703b-d4de-45f7-9473-bcfe87fc4d0e",
    "metadata": {},
    "source": [
-    "+ The ages that had the most population by 2015 were between 18 to 60 years old, today this could mean the ranges with most population may be between 18 to 64 years old having in count people age and the mortality rate.\n",
+    "+ In 2015, the age group with the highest population was between 18 and 60 years old. Today, considering factors like age and mortality rates, this range may extend from 18 to 64 years old.\n",
     "  \n",
     "+ The top 3 occupations with more people employed, were occupations related to 1. sales and services, 2. business and finance, 3. trades, transportation and equipment.\n",
     "\n",
-    "+ The Income has been increasing by the past years due inflation, the median Income by 2021 was just over $40000 Cad, the income vary between occupations and statistics show that there is a tendency that male earn more money than female\n",
+    "+ Income has been increasing over the past years due to inflation. By 2021, the median income was just over $40,000 CAD. Income varies across occupations, and statistics indicate a tendency for males to earn more than females.\n",
     "\n",
-    "+ The top 4 provinces with most Latin American are: 1.Ontario, 2. Quebec, 3.Alberta, 4. British Columbia, the total Latin American Canadian population was over 670,000 in 2016, nowadays is believe this number may be around 800,000.\n",
+    "+ The top four provinces with the highest Latin American populations are: 1. Ontario, 2. Quebec, 3. Alberta, and 4. British Columbia. In 2016, the total Latin American Canadian population exceeded 670,000, and it is believed that this number has now reached around 800,000..\n",
     "  \n",
     "+ Almost 9% of the population have diabetes, Statistics Canada believes nowadays around 3.6 million people live with diabetes\n",
     "\n",
@@ -1642,13 +1788,13 @@
    "id": "713928a1-aa3d-4941-9c81-14d98761f129",
    "metadata": {},
    "source": [
-    "Income statistics Canada madeinca.ca/income-statistics-canada/ \n",
+    "1. Made in CA. (2024). Income statistics in Canada. https://madeinca.ca/income-statistics-canada/\n",
     "\n",
-    "Census 2016 Canada https://www12.statcan.gc.ca/census-recensement/2016/dp-pd/index-eng.cfm\n",
+    "2. Statistics Canada. (2017). Census profile, 2016 census. https://www12.statcan.gc.ca/census-recensement/2016/dp-pd/index-eng.cfm\n",
     "\n",
-    "Diabetes Statistics https://www150.statcan.gc.ca/t1/tbl1/en/tv.action?pid=1310087301\n",
+    "3. Statistics Canada. (2023). Table 13-10-0873-01 Diabetes, by age group [Data set]. https://www150.statcan.gc.ca/t1/tbl1/en/tv.action?pid=1310087301\n",
     "\n",
-    "Organic drink and food survey 2021 https://www.statista.com/statistics/1281346/natural-and-organic-food-consumer-perspective-canada/#:~:text=A%202021%20survey%20of%20Canadian%20consumers%20showed%20that,organic%20products%20are%20healthier%20than%20mainstream%20products%2C%20though."
+    "4. Statista. (2021). Natural and organic food consumer perspective in Canada. https://www.statista.com/statistics/1281346/natural-and-organic-food-consumer-perspective-canada/#:~:text=A%202021%20survey%20of%20Canadian%20consumers%20showed%20that,organic%20products%20are%20healthier%20than%20mainstream%20products%2C%20though."
    ]
   }
  ],
